{
  "version": 4,
  "terraform_version": "1.3.6",
  "serial": 41,
  "lineage": "7abc2061-04be-b9ef-f289-e73473ca5d62",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "acesso-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:813712680819:security-group/sg-05de27f1ea1285e6c",
            "description": "acesso-ssh Allow TLS inbound traffic",
            "egress": [],
            "id": "sg-05de27f1ea1285e6c",
            "ingress": [
              {
                "cidr_blocks": [
                  "163.116.228.72/32"
                ],
                "description": "ssh from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "acesso-ssh",
            "name_prefix": "",
            "owner_id": "813712680819",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ssh"
            },
            "tags_all": {
              "Name": "ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-067e6c124e0599521"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "acesso-ssh-us-east-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:813712680819:security-group/sg-0305188a044d069f3",
            "description": "acesso-ssh Allow TLS inbound traffic",
            "egress": [],
            "id": "sg-0305188a044d069f3",
            "ingress": [
              {
                "cidr_blocks": [
                  "163.116.228.72/32"
                ],
                "description": "ssh from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "acesso-ssh",
            "name_prefix": "",
            "owner_id": "813712680819",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ssh"
            },
            "tags_all": {
              "Name": "ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b0a678ab72db79d7"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}